--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
       content="width=device-width, initial-scale=1,
   maximum-scale=5"
     />
+    <!-- styles -->
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <!-- protons -->
+    <link rel="stylesheet" href="./styles/protons/colors.css">
+    <link rel="stylesheet" href="./styles/protons/texts.css">
+    <link rel="stylesheet" href="./styles/protons/img.css">
+    <!-- atoms -->
+    <link rel="stylesheet" href="./styles/molecules/footer.css">
+    <!-- molecules -->
+
+    <!-- template -->
 
     <link rel="icon" href="devchallenges.png" />
 
@@ -21,75 +33,68 @@
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
+    <title>The Team - Devchallenges</title>
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <main>
+
+      <h1>The creative crew</h1>
+
+      <div class="texts">
+        <h3>Who we are</h3>
+        <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+      <div class="div-group-team">
+
+        <div class="card-team">
+          <img src="./assets/img/photo1.png" alt="" class="pic">
+          <span class="txt--poppins txt--semi-bold">Bill Mahoney</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">Product owner</span>
+        </div>
+        
+        <div class="card-team">
+          <img src="./assets/img/photo2.png" alt="" class="pic">
+          <span>Saba Cabrera</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">Art director</span>
+        </div>
+        
+        <div class="card-team">
+          <img src="./assets/img/photo3.png" alt="" class="pic">
+          <span>Shae Le</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">Tech Lead</span>
+        </div>
+
+        <div class="card-team">
+          <img src="./assets/img/photo4.png" alt="" class="pic">
+          <span>Skylah Lu</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">UX Designer</span>
+        </div>
+
+        <div class="card-team">
+          <img src="./assets/img/photo5.png" alt="" class="pic">
+          <span>Griff Richards</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">Developer</span>
+        </div>
+
+        <div class="card-team">
+          <img src="./assets/img/photo6.png" alt="" class="pic">
+          <span>Stan John</span>
+          <span class="txt--pt-serif txt--upper txt--normal color--black">Deverloper</span>
+        </div>
+
+      </div>
+
+
+    </main>
+
+    <footer class="footer">
+
+      <span class="txt--s color--light-gray txt--regular txt--center">created by DaniRox - devChallenges.io</span>
+
+    </footer>
+
   </body>
 </html>
