--- a/index.html
+++ b/index.html
@@ -40,49 +40,52 @@
 
     <main>
 
-      <h1>The creative crew</h1>
+      <div class="div-texts">
+        <h1>The creative crew</h1>
 
-      <div class="texts">
-        <h3>Who we are</h3>
-        <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+        <div class="">
+          <h3>Who we are</h3>
+          <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+        </div>
       </div>
+
 
       <div class="div-group-team">
 
         <div class="card-team">
           <img src="./assets/img/photo1.png" alt="" class="pic">
-          <span class="txt--poppins txt--semi-bold">Bill Mahoney</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">Product owner</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Bill Mahoney</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Product owner</span>
         </div>
         
         <div class="card-team">
           <img src="./assets/img/photo2.png" alt="" class="pic">
-          <span>Saba Cabrera</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">Art director</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Saba Cabrera</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Art director</span>
         </div>
         
         <div class="card-team">
           <img src="./assets/img/photo3.png" alt="" class="pic">
-          <span>Shae Le</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">Tech Lead</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Shae Le</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Tech Lead</span>
         </div>
 
         <div class="card-team">
           <img src="./assets/img/photo4.png" alt="" class="pic">
-          <span>Skylah Lu</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">UX Designer</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Skylah Lu</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">UX Designer</span>
         </div>
 
         <div class="card-team">
           <img src="./assets/img/photo5.png" alt="" class="pic">
-          <span>Griff Richards</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">Developer</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Griff Richards</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Developer</span>
         </div>
 
         <div class="card-team">
           <img src="./assets/img/photo6.png" alt="" class="pic">
-          <span>Stan John</span>
-          <span class="txt--pt-serif txt--upper txt--normal color--black">Deverloper</span>
+          <span class="txt--poppins txt--semi-bold txt--m color--black">Stan John</span>
+          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Deverloper</span>
         </div>
 
       </div>
