--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <link rel="stylesheet" href="./styles/protons/colors.css">
     <link rel="stylesheet" href="./styles/protons/texts.css">
     <link rel="stylesheet" href="./styles/protons/img.css">
+    <link rel="stylesheet" href="./styles/protons/span.css">
     <!-- atoms -->
-    <link rel="stylesheet" href="./styles/molecules/footer.css">
+    <link rel="stylesheet" href="./styles/atoms/div-img.css">
     <!-- molecules -->
+    <link rel="stylesheet" href="./styles/molecules/footer.css">
+    <link rel="stylesheet" href="./styles/molecules/div-group-team.css">
 
     <!-- template -->
 
@@ -41,11 +44,11 @@
     <main>
 
       <div class="div-texts">
-        <h1>The creative crew</h1>
+        <h1 class="txt--pt-serif txt--xl txt--bold color--black">The creative crew</h1>
 
         <div class="">
-          <h3>Who we are</h3>
-          <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+          <h3 class="txt--poppins txt--l txt--semi-bold txt--upper color--black">Who we are</h3>
+          <p class="txt--poppins txt--m txt--regular color--black">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
         </div>
       </div>
 
@@ -53,39 +56,57 @@
       <div class="div-group-team">
 
         <div class="card-team">
-          <img src="./assets/img/photo1.png" alt="" class="pic">
+          <div class="div-img">
+            <img src="./assets/img/photo1.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Product owner</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Bill Mahoney</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Product owner</span>
         </div>
         
-        <div class="card-team">
-          <img src="./assets/img/photo2.png" alt="" class="pic">
+        <div class="card-team card-team--margin-top">
+          <div class="div-img">
+            <img src="./assets/img/photo2.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Art director</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Saba Cabrera</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Art director</span>
         </div>
         
         <div class="card-team">
-          <img src="./assets/img/photo3.png" alt="" class="pic">
+          <div class="div-img">
+            <img src="./assets/img/photo3.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Tech Lead</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Shae Le</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Tech Lead</span>
         </div>
 
-        <div class="card-team">
-          <img src="./assets/img/photo4.png" alt="" class="pic">
+        <div class="card-team card-team--margin-top">
+          <div class="div-img">
+            <img src="./assets/img/photo4.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">UX Designer</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Skylah Lu</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">UX Designer</span>
         </div>
 
         <div class="card-team">
-          <img src="./assets/img/photo5.png" alt="" class="pic">
+          <div class="div-img">
+            <img src="./assets/img/photo5.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Developer</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Griff Richards</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Developer</span>
         </div>
 
-        <div class="card-team">
-          <img src="./assets/img/photo6.png" alt="" class="pic">
+        <div class="card-team card-team--margin-top">
+          <div class="div-img">
+            <img src="./assets/img/photo6.png" alt="" class="pic">
+            <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Deverloper</span>
+          </div>
+
           <span class="txt--poppins txt--semi-bold txt--m color--black">Stan John</span>
-          <span class="txt--pt-serif txt--upper txt--normal txt--s color--black">Deverloper</span>
         </div>
 
       </div>
