--- a/index.html
+++ b/index.html
@@ -19,22 +19,12 @@
     <link rel="stylesheet" href="./styles/atoms/div-img.css">
     <!-- molecules -->
     <link rel="stylesheet" href="./styles/molecules/footer.css">
+    <link rel="stylesheet" href="./styles/molecules/card-team.css">
     <link rel="stylesheet" href="./styles/molecules/div-group-team.css">
 
     <!-- template -->
 
     <link rel="icon" href="devchallenges.png" />
-
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
 
     <title>The Team - Devchallenges</title>
 
@@ -44,18 +34,18 @@
     <main>
 
       <div class="div-texts">
-        <h1 class="txt--pt-serif txt--xl txt--bold color--black">The creative crew</h1>
+        <h1 class="txt--pt-serif txt--xl txt--bold txt--spacing color--black">The creative crew</h1>
 
         <div class="">
           <h3 class="txt--poppins txt--l txt--semi-bold txt--upper color--black">Who we are</h3>
-          <p class="txt--poppins txt--m txt--regular color--black">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+          <p class="txt--poppins txt--m txt--regular color--black line--height">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
         </div>
       </div>
 
 
       <div class="div-group-team">
 
-        <div class="card-team">
+        <div class="card-team card-team--margin-bottom">
           <div class="div-img">
             <img src="./assets/img/photo1.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Product owner</span>
@@ -73,7 +63,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Saba Cabrera</span>
         </div>
         
-        <div class="card-team">
+        <div class="card-team card-team--margin-bottom">
           <div class="div-img">
             <img src="./assets/img/photo3.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Tech Lead</span>
@@ -91,7 +81,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Skylah Lu</span>
         </div>
 
-        <div class="card-team">
+        <div class="card-team card-team--margin-bottom">
           <div class="div-img">
             <img src="./assets/img/photo5.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Developer</span>
