--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <link rel="stylesheet" href="./styles/protons/span.css">
     <!-- atoms -->
     <link rel="stylesheet" href="./styles/atoms/div-img.css">
+    <link rel="stylesheet" href="./styles/atoms/div-texts.css">
     <!-- molecules -->
     <link rel="stylesheet" href="./styles/molecules/footer.css">
     <link rel="stylesheet" href="./styles/molecules/card-team.css">
     <link rel="stylesheet" href="./styles/molecules/div-group-team.css">
+    <link rel="stylesheet" href="./styles/molecules/div-title.css">
 
     <!-- template -->
 
@@ -33,10 +35,10 @@
 
     <main>
 
-      <div class="div-texts">
+      <div class="div-title">
         <h1 class="txt--pt-serif txt--xl txt--bold txt--spacing color--black">The creative crew</h1>
 
-        <div class="">
+        <div class="div-texts">
           <h3 class="txt--poppins txt--l txt--semi-bold txt--upper color--black">Who we are</h3>
           <p class="txt--poppins txt--m txt--regular color--black line--height">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
         </div>
@@ -45,7 +47,7 @@
 
       <div class="div-group-team">
 
-        <div class="card-team card-team--margin-bottom">
+        <div class="card-team" id="card-1">
           <div class="div-img">
             <img src="./assets/img/photo1.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Product owner</span>
@@ -54,7 +56,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Bill Mahoney</span>
         </div>
         
-        <div class="card-team card-team--margin-top">
+        <div class="card-team card-team--margin-top" id="card-2">
           <div class="div-img">
             <img src="./assets/img/photo2.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Art director</span>
@@ -63,7 +65,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Saba Cabrera</span>
         </div>
         
-        <div class="card-team card-team--margin-bottom">
+        <div class="card-team" id="card-3">
           <div class="div-img">
             <img src="./assets/img/photo3.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Tech Lead</span>
@@ -72,7 +74,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Shae Le</span>
         </div>
 
-        <div class="card-team card-team--margin-top">
+        <div class="card-team" id="card-4">
           <div class="div-img">
             <img src="./assets/img/photo4.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">UX Designer</span>
@@ -81,7 +83,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Skylah Lu</span>
         </div>
 
-        <div class="card-team card-team--margin-bottom">
+        <div class="card-team" id="card-5">
           <div class="div-img">
             <img src="./assets/img/photo5.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Developer</span>
@@ -90,7 +92,7 @@
           <span class="txt--poppins txt--semi-bold txt--m color--black">Griff Richards</span>
         </div>
 
-        <div class="card-team card-team--margin-top">
+        <div class="card-team" id="card-6">
           <div class="div-img">
             <img src="./assets/img/photo6.png" alt="" class="pic">
             <span class="txt--pt-serif txt--upper txt--normal txt--s color--black span--transform">Deverloper</span>
@@ -106,9 +108,10 @@
 
     <footer class="footer">
 
-      <span class="txt--s color--light-gray txt--regular txt--center">created by DaniRox - devChallenges.io</span>
+      <span class="txt--montserrat txt--m color--light-gray txt--regular txt--center">created by DaniRox - devChallenges.io</span>
 
     </footer>
 
+    <script src="mediaqueries.js"></script>
   </body>
 </html>
